--- a/example/banners/environment_mismatch/test.html
+++ b/example/banners/environment_mismatch/test.html
@@ -9,6 +9,7 @@
 <body>
 <script type="text/javascript" src="https://s0.2mdn.net/ads/studio/cached_libs/cssplugin_1.18.0_71489205621d46cbe88348eeb8fe493f_min.js"></script>
 <script type="text/javascript" src="js/test.js"></script>
+<img src="jpg/test.jpg"/>
 
 lol
 </body>
